--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<h1>Welcome to My Simple Web Page</h1>
-<p>This is a simple web page created to demonstrate basic HTML structure.</p>
+<h1>Milijuuuuu Estherkuuuuuuuu</h1>
+<p>Strasne moooooooc</p>
 
 </body>
 </html>
